--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@azure/msal-browser": "^4.7.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@azure/msal-react": "^3.0.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
