--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@azure/msal-browser": "^4.7.0",
     "@azure/msal-react": "^3.0.6",
+    "@faker-js/faker": "^9.6.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "@tanstack/react-table": "^8.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0"
