--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@tanstack/react-table": "^8.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
