--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@azure/msal-react": "^3.0.6",
     "@faker-js/faker": "^9.6.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "@tanstack/react-form": "^1.1.0",
     "@tanstack/react-table": "^8.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0"
   },
@@ -24,6 +26,7 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
