--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@azure/msal-browser": "^4.7.0",
     "@azure/msal-react": "^3.0.6",
     "@faker-js/faker": "^9.6.0",
     "@reduxjs/toolkit": "^2.6.1",
-    "@tanstack/react-form": "^1.1.0",
+    "@tanstack/react-form": "0.19.4",
     "@tanstack/react-table": "^8.21.2",
+    "@testing-library/jest-dom": "^6.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
@@ -24,16 +26,22 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-modal": "^3.16.3",
+    "@types/redux-mock-store": "^1.5.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "jsdom": "^26.0.0",
+    "redux-mock-store": "^1.5.5",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vitest": "^3.0.8"
   }
 }
