--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@azure/msal-browser": "^4.7.0",
     "@azure/msal-react": "^3.0.6",
     "@faker-js/faker": "^9.6.0",
+    "@microsoft/applicationinsights-react-js": "^18.3.6",
+    "@microsoft/applicationinsights-web": "^3.3.6",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-form": "0.19.4",
     "@tanstack/react-table": "^8.21.2",
