--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-form": "0.19.4",
     "@tanstack/react-table": "^8.21.2",
     "@testing-library/jest-dom": "^6.6.3",
+    "axios": "^1.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
